--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
         </div>
 
         <div style="padding-left:16px">
-            <h3>Vertical Mobile Navbar</h3>
+            <h3>Portifólio</h3>
             <p>This example demonstrates how a navigation menu on a mobile/smart phone could look like.</p>
             <p>Click on the hamburger menu (three bars) in the top right corner, to toggle the menu.</p>
         </div>
 
-        <div class="footer">
-            <footer>
-                <a href="#home" class="active">Logo</a>
-            </footer>
-        </div>
+        <footer>
+            <a href="#home" class="active">Logo</a> <!-- Trocar para tag img -->
+            <p>Entre em contato para desenvolvermos uma identidade digital para sua empresa!</p>
+            <a href="mailto:">email</a><br>
+            <a href="tel:+">1234567</a>
+        </footer>
 
         <!-- End smartphone / tablet look -->
     </div>
